--- a/Journ-E Website/index.html
+++ b/Journ-E Website/index.html
@@ -15,7 +15,11 @@
 
 		<div class="subHeadingBox">
 			
-			<a class="subHeading" href="home.html">Start your Journey now.</a>
+			<div class="subHeadingHolder">
+				
+				<a class="subHeading" href="home.html">Start your Journey now.</a>
+
+			</div>
 
 		</div>
 
