--- a/Journ-E Website/home.html
+++ b/Journ-E Website/home.html
@@ -9,11 +9,31 @@
 	
 		<div class="parent">
 
-			<div class="notebook">
+			<div class="selection sel01">
 
-				<p>hiiii</p>
+				<a>Quick Write</a>
 
 			</div>
+
+			<div class="selection sel02">
+
+				<a>Library</a>
+
+			</div>
+
+			<div class="selection sel03">
+
+				<a>Calendar</a>
+
+			</div>
+
+			<div class="selection sel04">
+
+				<a>Tasks</a>
+
+			</div>
+
+			
 
 		</div> 
 		
