--- a/Journ-E Website/home.html
+++ b/Journ-E Website/home.html
@@ -11,29 +11,43 @@
 
 			<div class="selection sel01">
 
-				<a>Quick Write</a>
+				<div class="rotate">
+	
+				<a href="content.html">Quick Write</a>
+
+				</div>
 
 			</div>
 
 			<div class="selection sel02">
 
-				<a>Library</a>
+				<div class="rotate">
+
+					<a>Library</a>
+
+				</div>
 
 			</div>
 
 			<div class="selection sel03">
 
-				<a>Calendar</a>
+				<div class="rotate">
+
+					<a>Calendar</a>
+
+				</div>
 
 			</div>
 
 			<div class="selection sel04">
 
-				<a>Tasks</a>
+				<div class="rotate">
+
+					<a>Tasks</a>
+					
+				</div>
 
 			</div>
-
-			
 
 		</div> 
 		
